tests/invalid/len_wrong_arg_count/main.py
def run_case() -> None:
    x: int = len("hello", "world")

if __name__ == "__main__":
    run_case()
